--- a/src/app/templates/home/home.component.html
+++ b/src/app/templates/home/home.component.html
@@ -2,5 +2,6 @@
     <div class="container">
         <app-header class="mt-5 mb-5"></app-header>
         <app-slider-home></app-slider-home>
+        <app-extern></app-extern>
     </div>
 </div>
